# xianyu_spider

./: .env.example  .gitignore  Dockerfile  MAKEFILE_USAGE.md  Makefile  README.md  check_db.py  check_env.py  check_llm_env.py  cli_config.py  cli_spider.py  cli_spider_base.py  database.py  env.example  llm_cli.py  main.py  models.py  pyproject.toml  requirements.txt  spider.py  test.json  test.py  test_cli_framework.py  test_cli_simple.py  test_config.py  test_database_config.py  test_database_manager.py  test_llm_basic.py  test_models.py
docs/: API_SETUP_GUIDE.md
llm_dynamic/: README.md  __init__.py  analyzer.py  analyzer_api.py  database.py  test_anaylyzer.py
utils/: price_parser.py
