[project]
name = "xianyu-spider"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dotenv>=0.9.9",
    "playwright>=1.55.0",
    "tortoise-orm>=0.25.1",
    "uvicorn>=0.35.0",
    "psutil>=5.9.0",
    "langchain>=0.3.27",
    "langchain-openai>=0.3.32",
    "langchain-core>=0.3.75",
]
